[package]
name = "dice"
version = "0.1.0"
edition = "2024"

[dependencies]
imgui-wgpu = { path = "./lib/imgui-wgpu-rs" }
imgui = "0.12"
log = "0.4"
smallvec = "1"
wgpu = "24.0.1"
bytemuck = { version = "1.13", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
image = { version = "0.24", default-features = false, features = ["png"] }
imgui-winit-support = "0.13"
pollster = "0.4"
raw-window-handle = "0.6"
winit = "0.30"
